# elkato-frontend

./: .gitignore  Cargo.toml  README.md  Trunk.toml  composer.json  elkato-frontend-3e108d0d815b6dc5.js  elkato-frontend-3e108d0d815b6dc5_bg.wasm  elkato-frontend-4f53fd837b6d97f4.js  elkato-frontend-4f53fd837b6d97f4_bg.wasm  elkato-frontend-62756e683a911d1b.js  elkato-frontend-6de25192adabb472.js  elkato-frontend-6de25192adabb472_bg.wasm  elkato-frontend-6ff6c1e8342ceeee.js  elkato-frontend-6ff6c1e8342ceeee_bg.wasm  elkato-frontend-747b330d246656e3.js  elkato-frontend-747b330d246656e3_bg.wasm  elkato-frontend-78a63139733e2b16.js  elkato-frontend-78a63139733e2b16_bg.wasm  elkato-frontend-9bbc159d7bad4273.js  elkato-frontend-9bbc159d7bad4273_bg.wasm  elkato-frontend-a7d411b4d270eb5e.js  elkato-frontend-a7d411b4d270eb5e_bg.wasm  elkato-frontend-b4a9bc2427b4f70e.js  elkato-frontend-b4a9bc2427b4f70e_bg.wasm  elkato-frontend-b84f91e04d0a7b62.js  elkato-frontend-c1af287fa6a63ae8.js  elkato-frontend-c1af287fa6a63ae8_bg.wasm  elkato-frontend-d455f9668774b335.js  elkato-frontend-d455f9668774b335_bg.wasm  elkato-frontend-f08397a2b2021665.js  index.html  patternfly-1006f96663db96ee.css  patternfly-addons-5ec482ac1720c751.css  patternfly-addons-b5368b86418ecb7a.css  patternfly-fdfb880831bdf068.css  proxy.php  style-6c68949e6c7c9595.css
.github/workflows/: publish.yaml
assets/: style.scss
elkato-api/: Cargo.toml
elkato-api/examples/: list.rs
elkato-api/src/: cors.rs  lib.rs  utils.rs
elkato-api/src/model/: mod.rs
elkato-api/src/parser/: mod.rs
php/: proxy.php
php/Geekality/: CrossOriginProxy.php  proxy_lib.php
src/: app.rs  main.rs  session.rs  utils.rs
src/pages/: index.rs  login.rs  mod.rs
