[package]
name = "elkato-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
futures = "0.3"
itertools = "0.10"
log = "0.4"
reqwest = "0.11"
scraper = { version = "0.14", features = [] }
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
